# persona

./: .gitignore  BRAND_FIX_PLAN.md  FLOWS.html  README.md  current_focus.md  extract_links.py  parse_urls.py  test_fb_dom.py
persona/: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  README.md  SETUP.md  config.example.json  docker-compose.worker.yml  docker-compose.yml  mcp_server.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  start.sh
persona/api/: README.md  __init__.py  approval_api.py  brand_flows_api.py  brand_schemas.py  brand_settings_api.py  brands_api.py  campaigns_api.py  engagements_api.py  ideas_api.py  oauth_api.py  recipe_card_api.py  recipes_api.py  routes_helpers.py  schedule_config.py  schedule_schemas.py  schedule_state.py  session_status_api.py
persona/data/: instagram_accounts.csv.example  rate_limits.json
persona/db/: schema.sql
persona/docker/: nginx.conf
persona/frontend/: .gitignore  README.md  index.html  openapi.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
persona/lib/: activity_log.py  affiliate_resolver.py  blog_post_queue.py  bootstrap.py  brand_provisioning.py  brand_resolver.py  brand_template_defaults.py  brand_templates.py  comment_generator.py  comment_generator_defaults.py  comment_graph.py  config.py  db.py  db_pool.py  dedup_pg.py  draft_helper.py  fb_composer_reel.py  fb_group_publish.py  flow_readiness.py  gemini_client.py  group_warmup.py  groups_queue.py  ideas_db.py  keyword_research.py  llm_tracing.py  local_env.py  logger.py  monthly_cleanup.py  notifier.py  pg_db.py  queue_state.py  rate_limiter.py  rate_limiter_redis.py  reply_drafter.py  scan_dedup.py  schedule_db.py  session_status.py  supabase_client.py  task_queue.py  thread_scraper.py  (+1 more)
persona/observability/: grafana-datasources.yml  loki-config.yml  promtail-config.yml
persona/profiles/: facebook.json  instagram.json
persona/recipe-publisher/: .gitignore  CLAUDE_recipe_card_final.md  README.md  SKILL.md  campaign_assembly.py
persona/scripts/: _cron_to_launchd.py  _dedup_dom.js  _dedup_probe_fb_btn.py  auto_drafter.py  campaign_worker.py  comment_approver.py  comment_composer_graph.py  comment_poster.py  content_pipeline.py  create_supabase_schema.sql  daily_wp_draft.py  delete_duplicate_comments.py  dev.py  distribute_fb_groups.py  fb_composer_diagnose.py  fb_group_diagnose.py  fb_group_note.py  fb_group_post.py  fb_group_scout.py  fb_groups_posting_scan.py  fb_login.py  fb_notification_scan.py  fb_scan.py  generate_recipe_card.py  ig_comment.py  ig_like.py  ig_own_comments.py  ig_pipeline.py  ig_scan.py  migrate_groups_tracker_notes.py  migrate_pg.py  migrate_sqlite_to_supabase.py  noop_healthcheck.py  onboard_brand.py  pinterest_oauth.py  publish_campaign.py  publish_prepared.py  refresh_keyword_research.py  refresh_trends_only.py  regenerate_plists.py  (+14 more)
persona/tests/: test_activity_log.py  test_affiliate_resolver.py  test_api_brand_flows.py  test_api_brand_settings.py  test_api_brands.py  test_api_brands_live.py  test_api_oauth.py  test_api_session_status.py  test_brand_provisioning.py  test_brand_provisioning_enabled_flows.py  test_brand_resolver.py  test_brand_templates.py  test_brands_db.py  test_brands_db_update.py  test_comment_generator.py  test_commenter.py  test_db.py  test_db_pool.py  test_dedup_pg.py  test_draft_helper.py  test_engagements_db.py  test_fb_comment.py  test_flow_readiness.py  test_gemini_client.py  test_groups_db.py  test_ig_age_parser.py  test_ig_comment.py  test_llm_tracing.py  test_local_env.py  test_logger.py  test_notifier.py  test_publish_campaign_cli.py  test_queue_state.py  test_rate_limiter.py  test_recipes_api_affiliate.py  test_recipes_api_lifecycle.py  test_regenerate_plists.py  test_reply_drafter.py  test_scan_dedup.py  test_schedule_db.py  (+9 more)
persona/tools/: launchd_plists.py
social-automation/: .gitignore  GEMINI_IMPLEMENTATION_PLAN.md  README.md  config.example.json  pyproject.toml  requirements-dev.txt  requirements.txt  schedule.json  start.sh
social-automation/api/: README.md  approval_api.py  campaign_schemas.py  flow_descriptions.py  flow_helpers.py  flow_state.py  recipe_schemas.py  recipes_api.py  routes_helpers.py  schedule_config.py  schedule_schemas.py  schedule_state.py  schemas.py  state.py  tiktok_candidates_api.py
social-automation/backups/: ideas_2026-04-18.json
social-automation/data/: affiliate_products.json  brand_voice_guide.md  campaigns.json  citation_sources.json  competitors.json  content_rules.json  groups_tracker.json  instagram_accounts.csv  keyword_clusters.json  post_templates.json  rate_limits.json  recipe_products.json  schedule.json
social-automation/docs/: automation_flows.html  glossary.md
social-automation/frontend/: .env.example  README.md  openapi.json  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
social-automation/launchd/: com.dogfoodandfun.auto-drafter.plist  com.dogfoodandfun.comment-approver.plist  com.dogfoodandfun.comment-composer.plist  com.dogfoodandfun.comment-poster.plist  com.dogfoodandfun.content-ideator.plist  com.dogfoodandfun.content-publish.plist  com.dogfoodandfun.daily-wp-draft.plist  com.dogfoodandfun.fb-group-distribute.plist  com.dogfoodandfun.fb-group-scout.plist  com.dogfoodandfun.fb-notification-scan.plist  com.dogfoodandfun.fb-scanner.plist  com.dogfoodandfun.ig-own-comments.plist  com.dogfoodandfun.ig-scanner.plist  com.dogfoodandfun.recipe-ideator.plist  com.dogfoodandfun.recipe-publisher.plist  com.dogfoodandfun.refresh-trends.plist  com.dogfoodandfun.reply-follower-evening.plist  com.dogfoodandfun.reply-follower-morning.plist  com.dogfoodandfun.site-analyzer.plist  com.dogfoodandfun.wp-comment-handler.plist  com.socialautomation.comment-approver.plist  com.socialautomation.daily-wp-draft.plist  com.socialautomation.ig-own-comments.plist  com.socialautomation.refresh-trends.plist
social-automation/lib/: activity_log.py  bootstrap.py  comment_generator.py  comment_graph.py  (+26 more)
(+650 files in other folders)
