[project]
name = "persona"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["lib", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "T20",   # flake8-print (flag print statements in lib, not scripts)
    "RUF",   # ruff-specific rules
]
ignore = [
    "T201",   # allow print() — scripts are CLI tools that print output
    "E501",   # line length handled by formatter
    "E402",   # import order — scripts need sys.path before lib imports
    "B905",   # zip strict — not needed for this project
    "SIM108", # ternary — readability preference
    "SIM105", # contextlib.suppress — try/except/pass is clearer in Playwright code
    "RUF001", # ambiguous unicode — en-dashes are intentional in brand copy
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM300", "RUF100"]  # allow assert True in tests; RUF100
                                          # exempt so file-level `# ruff: noqa:
                                          # S101, S603` (kept for the project's
                                          # PostToolUse security-lint hook,
                                          # which DOES enable `S`) doesn't
                                          # fire here.

# Legacy-debt ignores — remove when the file is migrated in later stages.
# Each ignore is intentional, not a blanket exemption. New code MUST NOT
# add to this list; instead, fix the issue.
"lib/idea_learner.py"            = ["SIM102"]   # nested-if; refactor in Stage G
"lib/keyword_research.py"        = ["F841"]     # unused `categories` — Stage G
"scripts/content_pipeline.py"    = ["SIM102", "RUF100"]  # nested-if; gets split per-stage in Stage F/G; RUF100 exempt because PostToolUse hook enables S+T201
"scripts/fb_group_post.py"       = ["N801"]     # _browser_session rename — Stage E
"scripts/fb_notification_scan.py" = ["RUF059"]  # unused unpacked var — Stage E
"scripts/ig_own_comments.py"     = ["RUF059"]   # unused unpacked var — Stage C

# ShutdownRequested is intentionally not an "Error" — it's a control-flow
# signal (subclass of SocialAutomationError), and the conventional name
# "*Requested" reads more naturally than "*RequestedError".
"lib/runtime/shutdown.py"        = ["N818"]
# _TokenExpired is a control-flow exception used to signal "refresh and retry"
# — same pattern as ShutdownRequested. The "*Expired" suffix reads naturally.
"recipe-publisher/publishers/instagram.py" = ["N818"]
"recipe-publisher/publishers/pinterest.py" = ["N818"]

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
addopts = "-v --tb=short -q"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

# Strict mode for new production-grade modules. Legacy modules opt in
# file-by-file as they migrate (Stage 1+). Never relax these globally;
# instead, add a per-module override below.
[[tool.mypy.overrides]]
module = [
    "lib.errors.*",
    "lib.observability.*",
    "lib.runtime.*",
    "lib.io.*",
    "lib.scheduling.*",
    "lib.engagement.*",
    "lib.sessions.*",
    "lib.policy.*",
    "lib.ig_follow.*",
    "lib.campaigns.*",
]
strict = true
disallow_any_explicit = true
disallow_any_generics = true
warn_return_any = true
warn_unreachable = true

# Legacy modules: keep loose until migrated. Remove from this list when
# the module is brought up to strict-clean.
# lib.task_queue: not "untyped legacy" like its neighbors here -- a
# redis-py stub ambiguity (its sync `Redis.brpop`/`.rpop`/etc. overloads
# resolve against the async client's `Awaitable`-returning signatures) that
# was never previously surfaced because no CI-mypy-scoped file imported it;
# PR7's scripts/task_dispatcher.py now does. Fixing the stub interaction
# itself is unrelated, pre-existing debt -- out of scope here.
[[tool.mypy.overrides]]
module = [
    "lib.affiliate_resolver",
    "lib.comment_generator",
    "lib.deduplication",
    "lib.idea_learner",
    "lib.keyword_research",
    "lib.local_env",
    "lib.logger",
    "lib.monthly_cleanup",
    "lib.notifier",
    "lib.rate_limiter",
    "lib.reply_drafter",
    "lib.task_queue",
    "lib.thread_scraper",
    "lib.comment_graph",
    "lib.group_discovery.*",
]
ignore_errors = true

[tool.coverage.run]
source = ["lib"]
branch = true
omit = [
    "lib/__pycache__/*",
    "tests/*",
    # Legacy modules with 0% test coverage. Each is on a stage's
    # to-do list — remove from this list when tests are added.
    # New modules MUST NOT be added here; ship with tests.
    "lib/comment_graph.py",            # Stage 9 — superseded by lib/graphs/comment/
    "lib/group_discovery/*",           # Stage E — fb-group-scout migration
    "lib/idea_learner.py",             # Stage G — content-track migration
    "lib/keyword_research.py",         # Stage G — content-track migration
    "lib/local_env.py",                # trivial; tested via integration use
    "lib/monthly_cleanup.py",          # Stage F — linear-graph migration
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
